--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,20 +62,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: QuickSand
-      fonts:
-#        - asset: assets/fonts/Quicksand-VariableFont_wght.ttf
-        - asset: assets/fonts/Quicksand-Bold.ttf
-#        - asset: assets/fonts/Quicksand-Light.ttf
-#        - asset: assets/fonts/Quicksand-Medium.ttf
-#        - asset: assets/fonts/Quicksand-Regular.ttf
-#        - asset: assets/fonts/Quicksand-SemiBold.ttf
-
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  - family: QuickSand
+    fonts:
+      - asset: fonts/Quicksand-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
